Final app but celcius and fahneit is not separated

--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ body {
     justify-content: center;
     align-items: center;
     background-color: grey;
+    background-image: url(images/logo.jpeg);
+    background-position: center;
+    background-size: cover;
+    font-weight: bold;
 }
 
 
@@ -36,10 +40,11 @@ body {
     outline: none;
     border: 1px solid grey;
     padding: 2px;
-    font-size: 9px;
+    font-size: 6px;
     width: 150px;
     padding: 4px;
-    font-size: 16px;
+    font-size: 10px;
+    background-color: aliceblue;
 }
 
 label {
@@ -50,9 +55,10 @@ label {
     display: flex; 
     text-align: center;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 120px;
     margin-top: 20px;
     border-radius: 10px;
     background-color:aqua;
@@ -61,15 +67,24 @@ label {
     color: black;
 }
 
-.outputOnclick {
-
-
+.result {
+    margin-top: 5px;
+    width: 100px;
+    display: grid;
+    grid-template-columns: 1fr;
 }
+
 
 .location {
     font-weight: bold;
     font-size: 16px;
+    color: blueviolet;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
+}
+
+.imgDescription {
+    margin-bottom: 15px;
 }
 
 .footer {
@@ -80,4 +95,9 @@ label {
     gap: 20x;
     font-size: 9px;
     color: black;
+}
+
+.footer {
+    background-color: azure;
+    border-radius: 5px;
 }
