--- a/style.css
+++ b/style.css
@@ -1,118 +1,101 @@
-body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh; /* Set a minimum height to ensure the content is fully visible */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, sans-serif;
-    color: #ffffff;
-    text-align: center;
+* {
+    box-sizing: border-box;
 }
+
+body {
+    background-color: #f1f1f1;
+    width: 100%; /* Use vw (viewport width) instead of vh for width */
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    justify-content: first baseline;
+    align-items: center;
+    flex-direction: column;
+}
+  
 
 .header {
-    height: 30px;
-    width: 98%;
-    margin-top: 5px;
-    border-radius: 10px;
+    background-color: bisque;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: grey;
-    background-image: url(images/logo.jpeg);
-    background-position: center;
-    background-size: cover;
+    height: 100px;
+    font-size: 50px;
     font-weight: bold;
+    margin: 10px;
+    border-radius:50px;
+    width: 98vw;
+    box-shadow: 1px 1px 10px     grey;
 }
 
-
-.main {
+main {
+    width: 95vw;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    margin-top: 10%;
+}
+
+.weatherIcon {
+    grid-area: weatherIcon; /* Correct the typo from weatherIon to weatherIcon */
+    background-color: blueviolet;
 }
 
 .input {
+    margin-top: 5%;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2px;
 }
 
-.input button {
-    border-radius: 5px;
-    border: 1px solid grey;
+#city, #searchBtn {
+    height: 50px;
+    width: 300px;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 20px;
     outline: none;
+    border: 0px;
+    box-shadow: 1px 1px 15px black;
 }
 
-.input button:active {
-    background-color: rgb(167, 155, 155);
+#searchBtn {
+    width: 100px;
+    border-radius: 50px;
 }
 
-#city {
-    border-radius: 10px;
-    outline: none;
-    border: 1px solid grey;
-    padding: 2px;
-    font-size: 6px;
-    width: 150px;
-    padding: 4px;
-    font-size: 10px;
-    background-color: rgb(176, 182, 187);
+#searchBtn:active {
+    box-shadow: 1px 1px 10px black;
 }
-
-
-
 .output {
-    display: flex; 
-    text-align: center;
+   
+    display: flex;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
-    width: 200px;
-    height: 120px;
-    margin-top: 20px;
-    border-radius: 10px;
-    background-color:aqua;
-    font-size: 9px;
+    width: 400px;
+    height: 300px;
+    font-size: 30px;
+    border-radius: 40px;
+    box-shadow: 1px 1px 5px grey;
+    background-color: #c4f5ff;
+    margin: 20px;
     text-align: center;
-    color: black;
-}
-
-.result {
-    margin-top: 5px;
-    width: 100px;
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-
-.location {
-    font-weight: bold;
-    font-size: 16px;
-    color: blueviolet;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-}
-
-.imgDescription {
-    margin-bottom: 15px;
+    padding-top: 20px;
 }
 
 .footer {
-    height: 20px; 
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20x;
-    font-size: 9px;
-    color: black;
-}
+    height: 65px;
+    width: 200px;
+    font-size: 30px;
+    box-shadow: 1px 1px 10px grey;
+    border-radius: 20px;
+    margin-top: 5%;
 
-.footer {
-    background-color: azure;
-    border-radius: 5px;
 }
